js: add winer condition, word validation, end game, makeMap function, POST request

--- a/wordle.html
+++ b/wordle.html
@@ -10,7 +10,7 @@
     <header class="navbar">
       <h1 class="brand">Wordle!!</h1>
     </header>
-    <div class="info-bar">
+    <div class="info-bar show">
       <div class="spiral">🌟</div>
     </div>
     <div class="scoreboard">
